; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evsel.c_perf_evsel__open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evsel.c_perf_evsel__open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.cpu_map }
%struct.cpu_map = type { i32 }
%struct.TYPE_3__ = type { %struct.thread_map }
%struct.thread_map = type { i32 }
%struct.perf_evsel = type { i32 }

@empty_cpu_map = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@empty_thread_map = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @perf_evsel__open(%struct.perf_evsel* %0, %struct.cpu_map* %1, %struct.thread_map* %2) #0 {
  %4 = alloca %struct.perf_evsel*, align 8
  %5 = alloca %struct.cpu_map*, align 8
  %6 = alloca %struct.thread_map*, align 8
  store %struct.perf_evsel* %0, %struct.perf_evsel** %4, align 8
  store %struct.cpu_map* %1, %struct.cpu_map** %5, align 8
  store %struct.thread_map* %2, %struct.thread_map** %6, align 8
  %7 = load %struct.cpu_map*, %struct.cpu_map** %5, align 8
  %8 = icmp eq %struct.cpu_map* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  store %struct.cpu_map* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @empty_cpu_map, i32 0, i32 0), %struct.cpu_map** %5, align 8
  br label %10

10:                                               ; preds = %9, %3
  %11 = load %struct.thread_map*, %struct.thread_map** %6, align 8
  %12 = icmp eq %struct.thread_map* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store %struct.thread_map* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @empty_thread_map, i32 0, i32 0), %struct.thread_map** %6, align 8
  br label %14

14:                                               ; preds = %13, %10
  %15 = load %struct.perf_evsel*, %struct.perf_evsel** %4, align 8
  %16 = load %struct.cpu_map*, %struct.cpu_map** %5, align 8
  %17 = load %struct.thread_map*, %struct.thread_map** %6, align 8
  %18 = call i32 @__perf_evsel__open(%struct.perf_evsel* %15, %struct.cpu_map* %16, %struct.thread_map* %17)
  ret i32 %18
}

declare dso_local i32 @__perf_evsel__open(%struct.perf_evsel*, %struct.cpu_map*, %struct.thread_map*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
